Trabalhando com sub-componentes e suas rotas

--- a/Front/ProEventos-App/src/index.html
+++ b/Front/ProEventos-App/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container bg-light">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
